[gd_scene load_steps=2 format=3 uid="uid://cwrf1vwdkr505"]

[ext_resource type="Script" uid="uid://2p4y2rjmtmsb" path="res://Scenes/PauseMenus/PauseMenu.gd" id="1_flhmi"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flhmi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ResumeBtn" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Tagasi"

[node name="PlantIndexBtn" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Taimeteadmik"

[node name="OptionsMenuBtn" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Pausimenüü"

[connection signal="pressed" from="PanelContainer/HBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ResumeBtn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PlantIndexBtn" to="." method="_on_plant_index_btn_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/PlantIndexBtn" to="." method="_on_plant_index_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/OptionsMenuBtn" to="." method="_on_options_menu_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/OptionsMenuBtn" to="." method="_on_options_menu_btn_pressed"]
